--- a/app/src/pages/login/login.scss
+++ b/app/src/pages/login/login.scss
@@ -1,3 +1,47 @@
 page-login {
-
+    background-color: map-get($colors, appbg) !important;
+    ion-content {
+        background-color: map-get($colors, appbg) !important;
+        color: map-get($map: $colors, $key:apptxt) !important;
+        .login--container {
+            transform: translate(-50%, -50%);
+            position: absolute;
+            top: 40%;
+            left: 50%;
+            width: 90%;
+            text-align: center;
+            .logo {
+                font-size: 60px;
+                font-weight: bold;
+                color: rgb(255, 255, 255);
+                span {
+                    color: map-get($map: $colors, $key: apppink)
+                }
+            }
+            .sub-title {
+                color: map-get($map: $colors, $key:apptxtdark) !important;
+                font-size: 16px;
+                font-weight: 400;
+                display: block;
+                margin-top: 10%;
+            }
+            button {
+                width: 100%;
+                max-width: 300px;
+                font-size: 16px;
+                border: 2px solid map-get($map: $colors, $key: appgreen);
+                padding: 12px 0px;
+                margin-top: 5%;
+                outline: none;
+                color:map-get($map: $colors, $key: appgreen);
+                background: rgba(0, 0, 0, 0);
+                transition: all cubic-bezier(0.0, 0.0, 0.2, 1) 0.3s;
+                padding:10px;
+                .button--container{
+                    display:flex;
+                    justify-content: space-between;
+                }
+            }
+        }
+    }
 }
