--- a/app/src/theme/variables.scss
+++ b/app/src/theme/variables.scss
@@ -21,6 +21,10 @@ $app-direction: ltr;
 // the Sass variables found in Ionic's source scss files.
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
+// $font-family-base: 'MyFont';
+// $font-family-ios-base: 'MyFont';
+// $font-family-md-base: 'MyFont';
+// $font-family-wp-base: 'MyFont';
 
 
 
@@ -38,7 +42,12 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  appbg: #202632,
+  apptxt: #FFF,
+  apptxtdark: #C8C8C8,
+  appgreen:#23B584,
+  apppink:#FB4372
 );
 
 
