--- a/app/src/pages/home/home.scss
+++ b/app/src/pages/home/home.scss
@@ -1,3 +1,19 @@
 page-home {
-
+    
+    .notasks-container{
+        width:100%;
+        max-width:450px;
+        margin:0 auto;
+        text-align:center;
+        height: 151px;
+        margin-top:-75.5px;
+        position:absolute;
+        top:50%;
+        div{
+            font-size:1.7rem;
+        }
+        button{
+            margin-top:3rem;
+        }
+    }
 }
